# adventofcode

./: .flake8  .gitignore  README.md  day1.py  day2.py  pyproject.toml
2019/adventofcode/: day1.py  day4-2.py  day6.input  day6.py
2019/tests/: test_adventofcode.py
2020/day1/: currencycheck.ps1
2020/day2/: check_password_policy.ps1  check_password_position.ps1  reddit.ps1
2020/day3/: 1day-slope.ps1  2day-slope.ps1
2020/day4/: 1day-check.ps1  2day-check-nonworking.ps1  2day-check.ps1  3-2day-check.ps1
2020/day4/others/: aoc2040.py  matglas2.ps1  rules.txt  test.py
2020/day5/: day5.ps1
2020/day6/: day6.ps1
2021/day1/: Program.cs
2023/day01/: Program.cs  day01.sln  day01part01-mytest.txt
adventofcode/: day2.py  day4.py
