[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = "My Fun for AdventOfCode 2019"
authors = ["Ian K <iguyking@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^3.7.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
black = "^19.10b0"

[tool.poetry.scripts]
code = "code ."
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

